fixed a couple of overlaps when page is large

--- a/css/main.scss
+++ b/css/main.scss
@@ -3,7 +3,6 @@
 
 
 :root{
-    --break_color:black;
     --text_color:black;
     --background_color:white;
 }
@@ -25,25 +24,16 @@ html, body{
     display: flex;
     position: relative;
     padding-top: 2em;
-    padding-bottom: 1em;
+    padding-bottom: 2em;
     height: 30vh;
     width:100vw;
     align-items: center;
     justify-content: center;
-    //background-color: green;
-}
-
-#beatles_heading{
-    position: absolute;
-    width: 40vmax;
-
 }
 
 .break{
-    border-color:var(--break_color);
+    border-color:var(--text_color);
     width:50%;
-
-
     border-top: 1px;
 }
 
@@ -51,7 +41,6 @@ html, body{
     width: 100%;
     display: flex;
     flex-flow: column;
-    //background-color: antiquewhite;
     align-items: center;
     justify-content: center;
 
